<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:orientation="vertical"
                android:padding="@dimen/margin">

                <LinearLayout
                    android:id="@+id/form_search_map"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/company"
                        style="@style/DropDownLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:hint="@string/company">

                        <AutoCompleteTextView
                            style="@style/InputTextFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:hint="@string/meter_gas">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/meter"
                            style="@style/InputTextFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:hint="@string/code_company">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/code_company"
                            style="@style/InputTextFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/EditTextInputLayoutStyle"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/input_size"
                            android:layout_marginBottom="@dimen/input_margin_bottom"
                            android:layout_weight="0.9"
                            android:hint="@string/id_suscription_map">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/subscription_id"
                                style="@style/InputTextFont"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="text" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/search_by_code_button"
                            style="@style/ButtonStyle"
                            android:layout_width="48dp"
                            android:layout_height="@dimen/input_size"
                            android:layout_weight="0.1"
                            app:icon="@drawable/search_item" />

                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:hint="@string/address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            style="@style/InputTextFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:hint="@string/neighborhood">

                        <AutoCompleteTextView
                            android:id="@+id/neighborhood"
                            style="@style/InputTextFont"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:padding="@dimen/padding_edittext" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/EditTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:hint="@string/pqr_number">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/pqr"
                            style="@style/InputTextFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/state"
                        style="@style/DropDownLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/input_size"
                        android:layout_marginBottom="@dimen/input_margin_bottom"
                        android:hint="@string/condition">

                        <AutoCompleteTextView
                            style="@style/InputTextFont"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/button_margin_bottom"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/search_button"
                            style="@style/ButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/input_button_size"
                            android:layout_weight="1"
                            android:text="@string/search" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/clear_button"
                            style="@style/ButtonStyle"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/input_button_size"
                            android:layout_marginStart="@dimen/input_margin_bottom"
                            android:layout_weight="1"
                            android:text="@string/clear" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/result_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/subscription_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/back_button"
                            style="@style/ButtonStyle"
                            android:layout_width="@dimen/height_button"
                            android:layout_height="@dimen/height_button"
                            android:layout_alignParentStart="true"
                            android:src="@drawable/ic_back" />

                        <TextView
                            android:id="@+id/current_page"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/poppins_regular"
                            android:textSize="@dimen/label" />

                        <ImageButton
                            android:id="@+id/next_button"
                            style="@style/ButtonStyle"
                            android:layout_width="@dimen/height_button"
                            android:layout_height="@dimen/height_button"
                            android:layout_alignParentEnd="true"
                            android:src="@drawable/ic_next" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:textColor="@color/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>