<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_marginBottom="@dimen/input_margin_bottom"
                android:fitsSystemWindows="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/sync_up"
                    android:textColor="@color/title"
                    android:textSize="@dimen/title" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sync_button"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_button_size"
                    android:text="@string/start_sync_up"
                    android:layout_marginBottom="@dimen/input_margin_bottom"
                    style="@style/ButtonStyle" />

                <LinearLayout
                    android:id="@+id/layout_father"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/results_of_sync_up"
                        android:textColor="@color/title"
                        android:textSize="@dimen/label"
                        android:layout_marginBottom="@dimen/input_margin_bottom"/>

                    <TextView
                        android:id="@+id/total_subscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/label"
                        android:textColor="@color/title"/>

                    <TextView
                        android:id="@+id/total_novelty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/label"
                        android:textColor="@color/title"/>

                    <TextView
                        android:id="@+id/total_independence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textSize="@dimen/label"
                        android:textColor="@color/title"/>

                    <TextView
                        android:id="@+id/total_point"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/title"
                        android:textSize="@dimen/label"
                        android:layout_marginBottom="@dimen/input_margin_bottom"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>