<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/list_pending_act"
            android:textColor="@color/title"
            android:textSize="@dimen/subtitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_actualizacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            android:background="@color/cardview_shadow_end_color"
            tools:listitem="@layout/simple_list_item_marker" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/list_pending_ind"
            android:textColor="@color/title"
            android:textSize="@dimen/subtitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_ind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_independencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_weight="1"
            android:nestedScrollingEnabled="false"
            android:background="@color/cardview_shadow_end_color"
            tools:listitem="@layout/simple_list_item_marker" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/list_pending_point"
            android:textColor="@color/title"
            android:textSize="@dimen/subtitle"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message_point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_small"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_punto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/spacing_super_large"
            android:nestedScrollingEnabled="false"
            android:background="@color/cardview_shadow_end_color"
            tools:listitem="@layout/simple_list_item_marker" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>